--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>ThronDeveloper</h1>
-							<p>Hello, I am Umut. I am the founder of the project called Developine. I started my software life by making discord bots and I am currently continuing as a Front-end Developer. I have been involved in 6 big projects until today, but they were all closed for certain reasons. I am currently interested in the Developine project I mentioned above. You can contact me via discord or instagram.</a><br />
+							<p>Hello, I am Thron. I am the founder of the project called Developine. I started my software life by making discord bots and I am currently continuing as a Front-end Developer. I have been involved in 6 big projects until today, but they were all closed for certain reasons. I am currently interested in the Developine project I mentioned above. You can contact me via discord or instagram.</a><br />
 							</a></p>
 										<footer id="footer">
 								<ul class="icons">
